fix(cd): configure grpc msg size for server too
Before only the max msg size for the client was configured.

Ref: SRX-0NOYYD

--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -113,7 +113,7 @@ cd:
     create: false   # Add backend config for health checks on GKE only
     timeoutSec: 300  # 30sec is the default on gcp loadbalancers, however kuberpult needs more with parallel requests. It is the time how long the loadbalancer waits for kuberpult to finish calls to the rest endpoint "release"
     queueSize: 5
-  # The maximum message size in megabytes the client can receive.
+  # The maximum message size in megabytes the client can receive or send:
   grpcMaxRecvMsgSize: 4
   resources:
     limits:
