feat: trigger the release workflow automatically after CI builds
Ref: SRX-DZIKEG

--- a/.github/workflows/execution-plan-main.yml
+++ b/.github/workflows/execution-plan-main.yml
@@ -19,7 +19,12 @@ jobs:
     with:
       trigger: main
     secrets: inherit
-  
+
+  release:
+    needs: [ integration-tests ]
+    uses: ./.github/workflows/release.yml
+    secrets: inherit
+
   trivy-scan:
     needs: [execution-plan]
     uses: ./.github/workflows/trivy-scan.yml
