fix: update helm charts for new services
Ref: SRX-6VZR51

--- a/charts/kuberpult/templates/ingress.yaml
+++ b/charts/kuberpult/templates/ingress.yaml
@@ -294,7 +294,9 @@ spec:
         - uri:
             prefix: /api.v1.RolloutService/
         - uri:
-            prefix: /api.v1.GitService/
+            prefix: /api.v1.ManifestExportGitService/
+        - uri:
+            prefix: /api.v1.ProductSummaryService/
         - uri:
             prefix: /api.v1.VersionService/
         - uri:
