fix: replace buf with protoc
Ref: SRX-CS7AEW

--- a/infrastructure/docker/builder/Dockerfile
+++ b/infrastructure/docker/builder/Dockerfile
@@ -1,12 +1,9 @@
-FROM bufbuild/buf:1.55.1 AS buf
 FROM golang:1.24.2-alpine3.21
-
-COPY --from=buf /usr/local/bin/buf /usr/local/bin/buf
 
 RUN apk add --no-cache  \
         ca-certificates tar tzdata curl bash git \
         gcc g++ pkgconfig make cmake \
-        go \
+        go protoc protobuf-dev \
         python3 py3-pip \
         musl-dev libffi-dev openssl-dev libssh2-dev \
         sqlite sqlite-dev \
@@ -20,6 +17,9 @@ RUN npm install -g pnpm@8.9.2
 
 ARG GO_CI_LINT_VERSION="v2.2.1"
 RUN curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/HEAD/install.sh | sh -s -- -b $(go env GOPATH)/bin $GO_CI_LINT_VERSION
+
+RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+RUN go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 
 RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 
