--- a/services/manifest-repo-export-service/Dockerfile
+++ b/services/manifest-repo-export-service/Dockerfile
@@ -7,17 +7,17 @@ FROM alpine:3.22.1 AS compiler
 RUN apk add --no-cache  \
         ca-certificates tar tzdata curl bash git \
         gcc g++ pkgconfig make cmake \
-        go \
         python3 py3-pip \
         musl-dev libffi-dev openssl-dev libssh2-dev \
         sqlite sqlite-dev
 
 ARG UID=1000
 
-COPY --from=builder /usr/local/bin/buf /usr/local/bin/buf
 COPY --from=builder /usr/local/go /usr/local/go
 
 ENV PATH="/usr/local/go/bin:/kp/go/bin:${PATH}"
+
+RUN apk add protoc protobuf-dev
 
 COPY services/manifest-repo-export-service/install-libgit2.sh /tmp/install-libgit2.sh
 COPY services/manifest-repo-export-service/gitconfig /etc/gitconfig
@@ -40,9 +40,13 @@ COPY --from=builder /kp/go.mod ./go.mod
 COPY --from=builder /kp/go.sum ./go.sum
 
 COPY --chown=kp:kp pkg pkg
-RUN cd pkg && buf generate
+
+RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+RUN go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+RUN cd pkg && protoc --go_opt=paths=source_relative --go_out=. --go-grpc_opt=paths=source_relative,require_unimplemented_servers=false --go-grpc_out=. api/v1/api.proto
+
 RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
-RUN cd pkg &&  oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
+RUN cd pkg && oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
 
 COPY --chown=kp:kp services/manifest-repo-export-service services/manifest-repo-export-service
 
