--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -47,24 +47,24 @@ endif
 gen: grpc-api-gen publicapi
 
 grpc-api-gen: api/v1/api.EnvironmentConfig_grpc.pb.go
-api/v1/api.EnvironmentConfig_grpc.pb.go api/v1/api.pb.go api/v1/api.pb.gw.go api/v1/api_grpc.pb.go: api/v1/api.proto buf.yaml buf.gen.yaml buf.lock
+api/v1/api.EnvironmentConfig_grpc.pb.go api/v1/api.pb.go api/v1/api.pb.gw.go api/v1/api_grpc.pb.go: api/v1/api.proto
 	if grep -q '^import "google/api/annotations.proto"' $< || grep -q '^import "google/api/http.proto"' $< ; then echo 'Instead of using google.api.http protobuf annotations we write HTTP handlers by hand' ; exit 1 ; fi
 ifeq ($(PKG_WITHOUT_DOCKER),1)
 	@echo "Running without docker"
-	buf generate
+	protoc --go_opt=paths=source_relative --go_out=. --go-grpc_opt=paths=source_relative,require_unimplemented_servers=false --go-grpc_out=. api/v1/api.proto
 else
 	@echo "Running in docker"
-	docker run -w /kp/pkg --rm -v ".:/kp/pkg/" $(BUILDER_IMAGE) sh -c "buf generate"
+	docker run -w /kp/pkg --rm -v ".:/kp/pkg/" $(BUILDER_IMAGE) sh -c "protoc --go_opt=paths=source_relative --go_out=. --go-grpc_opt=paths=source_relative,require_unimplemented_servers=false --go-grpc_out=. api/v1/api.proto"
 endif
 
 publicapi: publicapi/$(GO_SERVER_GEN)
 publicapi/$(GO_SERVER_GEN): publicapi/api.yaml
 ifeq ($(PKG_WITHOUT_DOCKER),1)
 	@echo "Running without docker"
-	buf generate && go tool oapi-codegen -generate "std-http-server" -o publicapi/$(GO_SERVER_GEN) -package publicapi publicapi/api.yaml
+	protoc --go_opt=paths=source_relative --go_out=. --go-grpc_opt=paths=source_relative,require_unimplemented_servers=false --go-grpc_out=. api/v1/api.proto && go tool oapi-codegen -generate "std-http-server" -o publicapi/$(GO_SERVER_GEN) -package publicapi publicapi/api.yaml
 else
 	@echo "Running in docker"
-	docker run -w /kp/pkg --rm -v ".:/kp/pkg" $(BUILDER_IMAGE) sh -c 'buf generate && go tool oapi-codegen -generate "std-http-server" -o publicapi/$(GO_SERVER_GEN) -package publicapi publicapi/api.yaml'
+	docker run -w /kp/pkg --rm -v ".:/kp/pkg" $(BUILDER_IMAGE) sh -c 'protoc --go_opt=paths=source_relative --go_out=. --go-grpc_opt=paths=source_relative,require_unimplemented_servers=false --go-grpc_out=. api/v1/api.proto && go tool oapi-codegen -generate "std-http-server" -o publicapi/$(GO_SERVER_GEN) -package publicapi publicapi/api.yaml'
 endif
 
 release: #no-op
