--- a/docker-compose.datadog.yml
+++ b/docker-compose.datadog.yml
@@ -9,6 +9,7 @@ services:
       - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
     ports:
       - 127.0.0.1:8126:8126/tcp
+      - 127.0.0.1:8125:8125/udp
     environment:
       - DD_APM_ENABLED=true
       - DD_APM_NON_LOCAL_TRAFFIC=true
@@ -23,6 +24,7 @@ services:
       - KUBERPULT_ENABLE_METRICS=true
       - KUBERPULT_ENABLE_TRACING=true
       - DD_AGENT_HOST=datadog-agent
+      - KUBERPULT_DOGSTATSD_ADDR=datadog-agent:8125
       - DD_SERVICE=kuberpult-cd-service
       - DD_VERSION=0.0.0
       - DD_ENV=$DD_ENV
@@ -34,6 +36,7 @@ services:
       - KUBERPULT_ENABLE_METRICS=true
       - KUBERPULT_ENABLE_TRACING=true
       - DD_AGENT_HOST=datadog-agent
+      - KUBERPULT_DOGSTATSD_ADDR=datadog-agent:8125
       - DD_SERVICE=kuberpult-manifest-repo-export-service
       - DD_VERSION=0.0.0
       - DD_ENV=$DD_ENV
@@ -42,7 +45,6 @@ services:
       datadog-agent:
         condition: service_healthy
     environment:
-      - KUBERPULT_ENABLE_METRICS=true
       - KUBERPULT_ENABLE_TRACING=true
       - DD_AGENT_HOST=datadog-agent
       - DD_SERVICE=kuberpult-frontend-service
