fix: less DD log spam in local setup
Ref: SRX-NSIUVB

--- a/docker-compose.datadog.yml
+++ b/docker-compose.datadog.yml
@@ -15,6 +15,7 @@ services:
       - DD_APM_NON_LOCAL_TRAFFIC=true
       - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
       - DD_AC_EXCLUDE=name:datadog-agent
+      - DD_LOG_LEVEL=ERROR
     stop_grace_period: 2.0s
   cd-service:
     depends_on:
