update gitignore for vscode and pnpm

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,13 @@ services/cd-service/repository_remote
 services/cd-service/repository
 services/cd-service/environment_configs.json
 services/manifest-repo-export-service/pkg/service/repository_tags
+services/frontend-service/.cache/
+services/frontend-service/.local/
 database/db.sqlite
 .DS_Store
 .install
 .idea/
+.vscode/
 .*.sentinel
 .pnpm-store
 build/
