move as a standalone migration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,6 +92,7 @@ services:
       - KUBERPULT_VERSION=v0.1.2
       - KUBERPULT_CHECK_CUSTOM_MIGRATIONS=false
       - KUBERPULT_GIT_TIMESTAMP_MIGRATIONS_ENABLED=false
+      - KUBERPULT_OUTDATED_DEPLOYMENTS_CLEANING_ENABLED=true
       - KUBERPULT_ESL_PROCESSING_BACKOFF=1
       - KUBERPULT_FAIL_ON_ERROR_WITH_GIT_PUSH_TAGS=true
     volumes:
