--- a/charts/kuberpult/templates/manifest-repo-export-service.yaml
+++ b/charts/kuberpult/templates/manifest-repo-export-service.yaml
@@ -245,6 +245,12 @@ spec:
 {{- end }}
         - name: KUBERPULT_GIT_TIMESTAMP_MIGRATIONS_ENABLED
           value: "{{ .Values.db.gitTimestampMigrations.enabled }}"
+          # In the past, Kuberpult had a bug which keept outdated deployment records in the database.
+          # i.e., These records point to nil releases version or the releases which do not have any manifests for the environment they are deployed to.
+          # Or those points to environments that do not exist anymore.
+          # This flag enables a custom migration which removes these outdated deployment records from the database.
+        - name: KUBERPULT_OUTDATED_DEPLOYMENTS_CLEANING_ENABLED
+          value: "{{ .Values.db.outdatedDeploymentsCleaning.enabled }}"
         volumeMounts:
         - name: repository
           # The repository volume, an emptyDir, is mounted to the kp directory.
