--- a/charts/kuberpult/templates/manifest-repo-export-service.yaml
+++ b/charts/kuberpult/templates/manifest-repo-export-service.yaml
@@ -245,6 +245,8 @@ spec:
 {{- end }}
         - name: KUBERPULT_GIT_TIMESTAMP_MIGRATIONS_ENABLED
           value: "{{ .Values.db.gitTimestampMigrations.enabled }}"
+        - name: KUBERPULT_OUTDATED_DEPLOYMENTS_CLEANING_ENABLED
+          value: "{{ .Values.db.outdatedDeploymentsCleaning.enabled }}"
         volumeMounts:
         - name: repository
           # The repository volume, an emptyDir, is mounted to the kp directory.
