fix: add go import formatter gci
Added a make target "lint-fix" to fix lint issues automatically.

The CI now builds a service if the linter or Makefiles were changed.

Ref: SRX-G4C6ZY

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,3 +19,14 @@ issues:
 output:
   format: tab # This is where you set the output format to 'tab'
   sort-results: true # Equivalent to --sort-results
+formatters:
+  enable:
+    - gci
+  settings:
+    gci:
+      sections:
+        - standard # Standard packages.
+        - default # Imports that are not standard and not current project.
+        - prefix(github.com/freiheit-com/kuberpult) # Your local packages.
+      section-separators:
+        - newLine # Ensures a newline between the sections above.
