--- a/.github/workflows/release_manually.yml
+++ b/.github/workflows/release_manually.yml
@@ -22,6 +22,7 @@ jobs:
 #    secrets: inherit
 
   release:
+    needs: [ execution-plan ]
     name: Release kuberpult with semantic versioning
     runs-on: ubuntu-latest
     steps:
