--- a/.github/workflows/release_manually.yml
+++ b/.github/workflows/release_manually.yml
@@ -12,6 +12,7 @@ jobs:
     uses: ./.github/workflows/execution-plan-snippet.yml
     with:
       trigger: main
+      ref: "v${{ github.event.inputs.ref }}"
     secrets: inherit
 
 #  integration-tests:
