--- a/.github/workflows/execution-plan-snippet.yml
+++ b/.github/workflows/execution-plan-snippet.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: "${{ github.event.inputs.ref }}"
+          ref: "${{ inputs.ref }}"
       - uses: google-github-actions/auth@v2
         name: "Authenticate to Google Cloud"
         with:
@@ -84,7 +84,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: "${{ github.event.inputs.ref }}"
+          ref: "${{ inputs.ref }}"
       - name: Set version pr/main
         if: inputs.trigger == 'pull-request' || inputs.trigger == 'main'
         run: |
@@ -147,7 +147,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: "${{ github.event.inputs.ref }}"
+          ref: "${{ inputs.ref }}"
       - name: Install Buf
         uses: bufbuild/buf-action@v1
         with:
