--- a/.github/workflows/release_manually.yml
+++ b/.github/workflows/release_manually.yml
@@ -8,12 +8,12 @@ on:
         description: "omit the starting 'v'"
 
 jobs:
-  execution-plan:
-    uses: ./.github/workflows/execution-plan-snippet.yml
-    with:
-      trigger: main
-      ref: "v${{ github.event.inputs.ref }}"
-    secrets: inherit
+#  execution-plan:
+#    uses: ./.github/workflows/execution-plan-snippet.yml
+#    with:
+#      trigger: main
+#      ref: "v${{ github.event.inputs.ref }}"
+#    secrets: inherit
 
 #  integration-tests:
 #    needs: [execution-plan]
@@ -23,7 +23,7 @@ jobs:
 #    secrets: inherit
 
   release:
-    needs: [ execution-plan ]
+#    needs: [ execution-plan ]
     name: Release kuberpult with semantic versioning
     runs-on: ubuntu-latest
     steps:
@@ -61,11 +61,11 @@ jobs:
           git fetch --tags # this should have been done by the checkout action before.
           make tag-release-images RELEASE_IMAGE_TAG=v$RELEASE_IMAGE_VERSION
         env:
-          RELEASE_IMAGE_VERSION: "v${{ github.event.inputs.ref }}"
+          RELEASE_IMAGE_VERSION: "${{ github.event.inputs.ref }}"
       - name: Re-tag CLI service image with release version for google docker registry
         run: |
           echo 'If this step fails, ensure that the main github action is done. We rely on it to get the docker images.'
           git fetch --tags # this should have been done by the checkout action before.
           make tag-cli-release-image RELEASE_IMAGE_TAG=v$RELEASE_IMAGE_VERSION
         env:
-          RELEASE_IMAGE_VERSION: "v${{ steps.new-semrel-version.outputs.version }}"
+          RELEASE_IMAGE_VERSION: "${{ steps.new-semrel-version.outputs.version }}"
