fix: improve frontend Dockerfile (#2722)
Sort commands more sensibly:
First install tools,
then compile go,
then build pnpm.

This saves some time, because tools do not need to be rebuilt every time
running "docker build", and because the ui (pnpm) code changes most
frequently.

Ref: SRX-8WKW0G

--- a/services/frontend-service/Dockerfile
+++ b/services/frontend-service/Dockerfile
@@ -7,7 +7,17 @@ ENV PATH="/usr/local/go/bin:/kp/go/bin:${PATH}"
 
 RUN apk add protoc protobuf-dev
 
+# global pkg:
+COPY --chown=kp:kp pkg pkg
+
+RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+RUN go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
+RUN cd pkg && oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
+RUN cd pkg && protoc --go_opt=paths=source_relative --go_out=. --go-grpc_opt=paths=source_relative,require_unimplemented_servers=false --go-grpc_out=. api/v1/api.proto
+
 # frontend-service:
+# js:
 ADD services/frontend-service/package.json /kp/services/frontend-service/
 ADD services/frontend-service/pnpm-lock.yaml /kp/services/frontend-service/
 ADD services/frontend-service/pnpm-workspace.yaml /kp/services/frontend-service/
@@ -17,7 +27,10 @@ ADD services/frontend-service/.nvmrc /kp/services/frontend-service/
 ADD services/frontend-service/.npmrc /kp/services/frontend-service/
 ADD services/frontend-service/.eslintrc /kp/services/frontend-service/
 
-RUN cd /kp/services/frontend-service && pnpm i
+# go:
+WORKDIR /kp/
+COPY go.sum go.mod .
+RUN go mod download
 ADD services/frontend-service/cmd/server/ /kp/services/frontend-service/cmd/server/
 ADD services/frontend-service/pkg /kp/services/frontend-service/pkg
 ADD services/frontend-service/src /kp/services/frontend-service/src
@@ -26,22 +39,6 @@ ADD services/frontend-service/public /kp/services/frontend-service/public
 ADD pkg/api/v1 /kp/services/frontend-service/api
 ADD infrastructure /kp/infrastructure
 
-# global pkg:
-COPY --chown=kp:kp pkg pkg
-COPY go.sum go.mod /kp/
-
-RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-RUN go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
-RUN cd pkg && protoc --go_opt=paths=source_relative --go_out=. --go-grpc_opt=paths=source_relative,require_unimplemented_servers=false --go-grpc_out=. api/v1/api.proto
-
-RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
-RUN cd pkg && oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
-
-# Build js:
-WORKDIR /kp/services/frontend-service/
-RUN mkdir -p src/api
-RUN protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_opt=oneof=unions,useOptionals=messages,esModuleInterop=true,outputClientImpl=grpc-web --ts_proto_out=src api/api.proto
-RUN pnpm build
 
 # Build go:
 WORKDIR /kp/
@@ -49,6 +46,13 @@ ADD Makefile.variables .
 ADD Makefile .
 RUN make -C pkg gen SKIP_BUILDER=1 PKG_WITHOUT_DOCKER=1
 RUN GOARCH=amd64 GOOS=linux CGO_ENABLED=0 go build -o /kp/main /kp/services/frontend-service/cmd/server/main.go
+
+# Build js:
+RUN cd /kp/services/frontend-service && pnpm i
+WORKDIR /kp/services/frontend-service/
+RUN mkdir -p src/api
+RUN protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_opt=oneof=unions,useOptionals=messages,esModuleInterop=true,outputClientImpl=grpc-web --ts_proto_out=src api/api.proto
+RUN pnpm build
 
 FROM scratch
 LABEL org.opencontainers.image.source=https://github.com/freiheit-com/kuberpult
