--- a/services/manifest-repo-export-service/Dockerfile
+++ b/services/manifest-repo-export-service/Dockerfile
@@ -27,25 +27,26 @@ ENV TZ=Europe/Berlin
 RUN adduser --disabled-password --home "/kp" --uid ${UID} kp
 RUN chown -R kp:kp /kp
 
+USER kp
+WORKDIR /kp
+
+COPY --from=builder /kp/go.mod ./go.mod
+COPY --from=builder /kp/go.sum ./go.sum
+RUN go mod download
+
+RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+RUN go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
+
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
 
 COPY services/manifest-repo-export-service/cmd/server/lib/ /lib
 COPY services/manifest-repo-export-service/cmd/server/usr/ /usr
 
-USER kp
-WORKDIR /kp
-
-COPY --from=builder /kp/go.mod ./go.mod
-COPY --from=builder /kp/go.sum ./go.sum
-
 COPY --chown=kp:kp pkg pkg
 
-RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-RUN go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 RUN cd pkg && protoc --go_opt=paths=source_relative --go_out=. --go-grpc_opt=paths=source_relative,require_unimplemented_servers=false --go-grpc_out=. api/v1/api.proto
-
-RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 RUN cd pkg && oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
 
 COPY --chown=kp:kp services/manifest-repo-export-service services/manifest-repo-export-service
